--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+url: https://gonsoftware.com
+enforce_ssl: www.gonsoftware.com
 title: GonSoftware
 name: gonsoftware
 email: helpdesk@gonsoftware.com
