--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ url: https://gonsoftware.com
 enforce_ssl: www.gonsoftware.com
 title: GonSoftware
 name: gonsoftware
-email: helpdesk@gonsoftware.com
-description: We build the best software
+email: byunggon.kang@gonsoftware.com
+description: 우리는 최고의 앱을 만듭니다/nWe create the best app
 
 baseurl: "/blog"
 url: ""
@@ -156,7 +156,7 @@ url: http://localhost:4000/ #the url of your site
 tag_manager_id: # This looks something like GTM-XXXXXXX
 google_analytics_tracking_id: # This looks something like UA-000000000-0 Head over to https://analytics.google.com/ to setup.
 
-cookies_banner: show # The value "show" will show the cookies banner, the value "none" will hide the banner.
+cookies_banner: none # The value "show" will show the cookies banner, the value "none" will hide the banner.
 
 cookie_accept_message: Thanks!
 
