--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ enforce_ssl: www.gonsoftware.com
 title: GonSoftware
 name: gonsoftware
 email: byunggon.kang@gonsoftware.com
-description: 우리는 최고의 앱을 만듭니다/nWe create the best app
+description: 우리는 최고의 앱을 만듭니다
 
 baseurl: "/blog"
 url: ""
