타이틀 문구 변경

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 url: https://gonsoftware.com 
 enforce_ssl: www.gonsoftware.com
-title: Gon ● Software
+title: gonSoftware
 name: gonsoftware
 email: byunggon.kang@gonsoftware.com
 description: 우리는 최고의 앱을 만듭니다
